--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test:watch:js": "watchify -t envify -t babelify test/index.test.js -o test/bundle.js -d -v",
     "build:js": "browserify -t envify -t babelify src/js/index.js -o src/bundle.js -d",
     "watch:js": "watchify -t envify -t babelify src/js/index.js -o src/bundle.js -d -v",
+    "build:plugin": "babel src/stylus/plugin/src -d src/stylus/plugin/lib",
+    "watch:plugin": "babel -w src/stylus/plugin/src -d src/stylus/plugin/lib",
     "release:js": "NODE_ENV=production browserify -t envify -t babelify src/js/index.js | uglifyjs -o dist/bundle.js",
     "build:css": "stylus -u nib src/stylus/index.styl -o src/ -m",
-    "watch:css": "stylus -w -u nib src/stylus/index.styl -o src/ -m",
+    "watch:css": "stylus -w -u nib src/stylus/index.styl -o src -m",
     "release:css": "stylus -u nib src/stylus/index.styl -o dist/ -c ",
     "build:html": "jade -P src/jade/index.jade -O src/jade/data.json -o src/",
     "watch:html": "jade -w -P src/jade/index.jade -O src/jade/data.json -o src/",
@@ -42,6 +44,7 @@
   },
   "homepage": "https://github.com/all-user/browser-seed#readme",
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.1",
     "babel-plugin-unassert": "^2.1.0",
     "babel-polyfill": "^6.9.1",
