--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:plugin": "babel src/stylus/plugin/src -d src/stylus/plugin/lib",
     "watch:plugin": "babel -w src/stylus/plugin/src -d src/stylus/plugin/lib",
     "release:js": "NODE_ENV=production browserify -t envify -t babelify src/js/index.js | uglifyjs -o dist/bundle.js",
-    "build:css": "stylus -u nib src/stylus/index.styl -o src/ -m",
-    "watch:css": "stylus -w -u nib src/stylus/index.styl -o src -m",
+    "build:css": "stylus -u nib -u foovar src/stylus/index.styl -o src/ -m",
+    "watch:css": "stylus -w -u nib -u foovar src/stylus/index.styl -o src -m",
     "release:css": "stylus -u nib src/stylus/index.styl -o dist/ -c ",
     "build:html": "jade -P src/jade/index.jade -O src/jade/data.json -o src/",
     "watch:html": "jade -w -P src/jade/index.jade -O src/jade/data.json -o src/",
@@ -56,6 +56,7 @@
     "browserify": "^13.0.1",
     "envify": "^3.4.1",
     "eslint": "^3.0.1",
+    "foovar": "0.0.0",
     "jade": "^1.11.0",
     "nib": "^1.1.0",
     "npm-run-all": "^2.3.0",
